--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ title: Home
 
 <div id="home">
   <h1>Blog Posts</h1>
-  <ul class="posts">
+  <article class="posts">
     {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+      <span>{{ post.date | date_to_string }}</span> &raquo; <h2><a href="{{ post.url }}">{{ post.title }}</a></h2> 
     {% endfor %}
-  </ul>
+  </article>
 </div>
