--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ title: Home
 			<div class="columns large-12">
 				<div id="hero-content" class="hero-content">
                     <div class="hero-description">
-					   <h1 class="animated fadeInLeftBig">Hi, I'm <span class="rwd-break">Mithicher Baro</span></h1>
-					   <h3 class="animated slideInDown"><span class="rwd-break">A self-learned Front-End</span> <span class="rwd-break">Web Developer from India</span></h3>
+					   <h1 class="animated fadeInLeftBig">Hi, my name is <span class="rwd-break">Mithicher Baro</span></h1>
+					   <h3 class="animated slideInDown">A self-learned Web Designer &amp; Web Developer from India</h3>
                     </div>
 				</div>
 			</div>
@@ -45,7 +45,7 @@ title: Home
 		</div>
 	</div>
 
-	<div class="service has-padding-tb-lg bg-white">
+	<div class="service has-padding-tb bg-white">
 		 
 		<div class="row wow fadeInDown">
 			<div class="columns large-12">
@@ -76,7 +76,7 @@ title: Home
 		 
 	</div>
 
-	<div class="contact has-padding-tb-lg text-center"> 
+	<div class="contact has-padding-tb text-center"> 
 		<div class="row wow fadeInDown">
 			 
 	        <div class="columns large-12">
