--- a/index.html
+++ b/index.html
@@ -67,9 +67,13 @@
         <div class="md:w-1/2">
           <div class="flex items-center">
             <div
-              class="mr-8 flex-no-shrink w-20 h-20 md:w-24 md:h-24 rounded-full bg-gray-200 border shadow-inset border-gray-300"
+              class="mr-4 md:mr-8 flex-no-shrink w-20 h-20 md:w-24 md:h-24 rounded-full bg-gray-200 border shadow-inset border-gray-300"
             >
-              <img src="mb.jpeg" alt="Mithicher's image" class="rounded-full" />
+              <img
+                src="mb.jpeg"
+                alt="Mithicher's image"
+                class="rounded-full w-20 h-20 md:w-24 md:h-24"
+              />
             </div>
             <div>
               <h1
@@ -182,7 +186,7 @@
         >.
       </p>
 
-      <p class="text-gray-700 text-lg md:text-xl font-normal md:w-2/4 mb-6">
+      <p class="text-gray-700 text-lg md:text-xl font-normal md:w-2/4 mb-10">
         <svg
           viewBox="0 0 20 20"
           fill="currentColor"
