--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
               <img
                 src="mb.jpeg"
                 alt="Mithicher's image"
-                class="rounded-full w-20 h-20 md:w-24 md:h-24"
+                class="rounded-full object-cover w-20 h-20 md:w-24 md:h-24"
               />
             </div>
             <div>
               <h1
-                class="my-0 text-3xl md:text-4xl sans-serif font-semibold tracking-wide uppercase text-gray-800"
+                class="my-0 text-2xl md:text-4xl sans-serif font-semibold tracking-wide uppercase text-gray-800"
               >
                 Mithicher Baro
               </h1>
@@ -126,7 +126,7 @@
       </div>
     </div>
 
-    <div class="max-w-6xl mx-auto px-6">
+    <div class="md:max-w-6xl mx-auto px-6">
       <p class="text-gray-700 text-lg md:text-xl font-normal md:w-2/4 mb-6">
         I’m a web developer based in Guwahati and currently working in a company
         named <strong class="font-semibold">Sumato</strong>. I create business
