--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       <p class="text-gray-700 text-lg md:text-xl font-normal md:w-2/4 mb-10">
         Drop me an email at
         <a
-          href="mailto:mithneu@gmail.com"
+          href="mailto:mithnehu@gmail.com"
           class="font-semibold border-b-2 border-gray-200 hover:bg-gray-200"
           >mithnehu@gmail.com</a
         >
