--- a/index.html
+++ b/index.html
@@ -138,10 +138,7 @@
         projects with <strong class="font-semibold">PHP</strong> &amp;
         <strong class="font-semibold">MySQL</strong> and a little bit of
         <strong class="font-semibold">HTML</strong> &amp;
-        <strong class="font-semibold">CSS</strong>. Nowadays I regularly use
-        <strong class="font-semibold">Laravel</strong> and
-        <strong class="font-semibold">Vue</strong> to build small to medium
-        scale business applications.
+        <strong class="font-semibold">CSS</strong>. Nowadays, I build small to medium-sized business applications with the <strong class="font-semibold">TALL (Tailwind, Alpine.js, Laravel, and Livewire)</strong> stack.
       </p>
 
       <p class="text-gray-700 text-lg md:text-xl font-normal md:w-2/4 mb-6">
