--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@
         <strong class="font-semibold">CSS</strong>. Nowadays, I build small to medium-sized business applications with the <strong class="font-semibold">TALL (Tailwind, Alpine.js, Laravel, and Livewire)</strong> stack.
       </p>
 
-      <p class="text-gray-700 text-lg md:text-xl font-normal md:w-2/4 mb-6">
+      <!--<p class="text-gray-700 text-lg md:text-xl font-normal md:w-2/4 mb-6">
         Besides programming I like to be part of the design process of website
         and product. Currently I'm learning
         <strong class="font-semibold">UI/UX design</strong>,
         <strong class="font-semibold">Database Optimization Techniques</strong>
         and <strong class="font-semibold">GraphQL</strong>.
-      </p>
+      </p>-->
 
       <p class="text-gray-700 text-lg md:text-xl font-normal md:w-2/4 mb-6">
         Feel free to get in touch. I share and tweet good stuffs in
